{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 29,
  "lineage": "b058bc82-4014-1018-3983-597c490489df",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "staticip-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.77.122.41",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-02T08:27:36.500-08:00",
            "id": "projects/lbg-cloud-incubation/regions/europe-west1/addresses/ubuntu-app",
            "name": "ubuntu-app",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "lbg-cloud-incubation",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/europe-west1/addresses/ubuntu-app",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-app"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "staticip-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.22.238.174",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-02T08:27:36.464-08:00",
            "id": "projects/lbg-cloud-incubation/regions/europe-west1/addresses/ubuntu-jenkins",
            "name": "ubuntu-jenkins",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "lbg-cloud-incubation",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/europe-west1/addresses/ubuntu-jenkins",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-jenkins"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-02T08:48:32.553-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lbg-cloud-incubation/global/firewalls/allow-http-rule-80",
            "log_config": [],
            "name": "allow-http-rule-80",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/default",
            "priority": 1000,
            "project": "lbg-cloud-incubation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/firewalls/allow-http-rule-80",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http-one"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-02T08:48:32.452-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/lbg-cloud-incubation/global/firewalls/allow-http-rule-8080",
            "log_config": [],
            "name": "allow-http-rule-8080",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/default",
            "priority": 1000,
            "project": "lbg-cloud-incubation",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/firewalls/allow-http-rule-8080",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-http-two"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230125",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/disks/ubuntu-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-app",
            "instance_id": "1390308280130493035",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "Z_oHo2NlVxU=",
            "name": "ubuntu-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.77.122.41",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/default",
                "network_ip": "10.132.0.17",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "lbg-cloud-incubation"
              }
            ],
            "project": "lbg-cloud-incubation",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http-one"
            ],
            "tags_fingerprint": "DhI-bpDQurU=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.staticip-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "ubuntu-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20230125",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/disks/ubuntu-jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-jenkins",
            "instance_id": "838944735429548651",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "pm9AJhlIbmg=",
            "metadata_startup_script": "#!/bin/bash\nif type apt \u003e /dev/null; then\n    pkg_mgr=apt\n    if [ $(uname -v) == *Debian* ]; then\n      java=\"default-jre\"\n    else\n      java=\"openjdk-11-jre\"\n    fi\nelif type yum /dev/null; then\n    pkg_mgr=yum\n    java=\"java\"\nfi\necho \"updating and installing dependencies\"\nsudo ${pkg_mgr} update\nsudo ${pkg_mgr} install -y ${java} wget git \u003e /dev/null\necho \"configuring jenkins user\"\nsudo useradd -m -s /bin/bash jenkins [...]
            "name": "ubuntu-jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.22.238.174",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/default",
                "network_ip": "10.132.0.16",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/europe-west1/subnetworks/default",
                "subnetwork_project": "lbg-cloud-incubation"
              }
            ],
            "project": "lbg-cloud-incubation",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/zones/europe-west1-b/instances/ubuntu-jenkins",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-http-two"
            ],
            "tags_fingerprint": "WMnt2DN3LK0=",
            "zone": "europe-west1-b"
          },
          "dependencies": [
            "google_compute_address.staticip-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/lbg-cloud-incubation/global/networks/my-terraform-network",
            "mtu": 0,
            "name": "my-terraform-network",
            "project": "lbg-cloud-incubation",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/my-terraform-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-02T08:27:37.262-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/lbg-cloud-incubation/regions/europe-west1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/global/networks/my-terraform-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "lbg-cloud-incubation",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/lbg-cloud-incubation/regions/europe-west1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}